Change cookie policy for auth
